# orbit-engine

./: .gitignore  CMakeLists.txt
demo/: TestComponent.cpp  TestComponent.hpp  main.cpp
include/Orbit/: Camera.hpp  Component.hpp  ComponentField.hpp  DebugMenu.hpp  GameObject.hpp  ImGuiHandler.hpp  Input.hpp  Keys.hpp  Logger.hpp  Mesh.hpp  Model.hpp  Runtime.hpp  Scene.hpp  SceneManager.hpp  Shader.hpp  Terrain.hpp  Texture.hpp  Transformable.hpp  Types.hpp  Vertex.hpp  Window.hpp
include/Orbit/Components/: CameraComponent.hpp
shaders/standard/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Component.cpp  ComponentField.cpp  DebugMenu.cpp  GameObject.cpp  ImGuiHandler.cpp  Input.cpp  Mesh.cpp  Model.cpp  Runtime.cpp  SceneManager.cpp  Shader.cpp  Terrain.cpp  Texture.cpp  Transformable.cpp  Window.cpp
src/Components/: CameraComponent.cpp
